# SPShub

./: .gitmodules  Cargo.toml  README.md  index.html  rust-toolchain  spshub-4eb22b5294306e25.js  spshub-4eb22b5294306e25_bg.wasm  spshub-74fd26eb98bb1cff.js  spshub-74fd26eb98bb1cff_bg.wasm  sw.js
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
etc/: REU_2023.yaml
src/: app.rs  lib.rs  main.rs
src/cebra_calibration/: app.rs  efficiency.rs  mod.rs
src/cebra_efficiency/: app.rs  detector.rs  exp_fitter.rs  gamma_line.rs  gamma_source.rs  measurements.rs  mod.rs
src/cebra_eventbuilder/: app.rs  channel_data.rs  channel_map.rs  compass_file.rs  compass_run.rs  error.rs  event_builder.rs  mod.rs  scaler_list.rs  shift_map.rs
src/eventbuilder/: app.rs  channel_map.rs  compass_run.rs  error.rs  kinematics.rs  mod.rs  nuclear_data.rs  sps_data.rs
src/plotter/: app.rs  cut.rs  egui_markers.rs  egui_polygon.rs  fitter.rs  histogram1d.rs  histogram2d.rs  histogram_creation.rs  histogrammer.rs  lazyframer.rs  mod.rs  processer.rs  workspace.rs  workspacer.rs
src/plotter/cutter/: cut.rs  cut_handler.rs  mod.rs
src/plotter/fit/: background_fitter.rs  egui_markers.rs  fit_handler.rs  gaussian_fitter.rs
src/plotter/fitter/: background_fitter.rs  egui_markers.rs  fit.rs  fit_handler.rs  gaussian_fitter.rs  mod.rs
src/plotter/histoer/: histogram_script.rs  histogrammer.rs
src/plotter/histogrammer/: histogram1d.rs  histogram_script.rs  histogrammer.rs  mod.rs  sps_histograms.rs
src/plotter/histograms/: cut.rs  egui_polygon.rs  histogram1d.rs  histogram2d.rs  histogrammer.rs  mod.rs
src/sps_cebra_eventbuilder/: app.rs  channel_data.rs  channel_map.rs  compass_data.rs  compass_file.rs  compass_run.rs  error.rs  event_builder.rs  kinematics.rs  mod.rs  nuclear_data.rs  scaler_list.rs  used_size.rs  ws.rs
src/sps_eventbuilder/: app.rs  channel_data.rs  channel_map.rs  compass_data.rs  compass_run.rs  error.rs  kinematics.rs  mod.rs  nuclear_data.rs  scaler_list.rs  shift_map.rs
src/sps_plot/: app.rs  excitation_fetchor.rs  mod.rs  nuclear_data.rs
src/sps_runtime_estimator/: app.rs
