[package]
name = "spshub"
version = "0.1.0"
authors = ["Alex Conley <imaconley1@gmail.com>"]
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = "0.26.0"
egui_plot = "0.26.0"
eframe = { version = "0.26.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# SPS Plot dependencies
reqwest = {version = "0.11.24", features = ["blocking", "json"]}
scraper = "0.18.1"
regex = "1.10.3"
tokio = { version = "1.36.0", default-features = false, features = ["rt", "sync", "macros", "io-util", "time"] }

# native:
# Eventbuilder dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
strum = "0.26.1"
strum_macros = "0.26.1"
rand = "0.8.5"
bitflags = "2.4.2"
nom = "7.1.3"
flate2 = "1.0.28"
# polars = { version = "0.36.0", features = ["parquet", "lazy", "dtype-struct"] }
tar = "0.4.40"
serde_yaml = "0.9.31"
rfd = "0.13"

# plotter dependencies
# polars = { version = "0.36", features = ["lazy", "parquet", "ndarray"] }
# rfd = "0.13"
# serde = { version = "1.0", features = ["derive"] }
# serde_yaml = "0.9.31"
serde_json = "1.0"
geo = "0.27.0"
fnv = "1.0.7"

polars = { version = "0.36", features = ["lazy", "parquet", "ndarray", "dtype-struct"] }


# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

