[package]
name = "spshub"
version = "0.1.0"
authors = ["Alex Conley <imaconley1@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[dependencies]
egui = "0.27.2"
egui_plot = {version = "0.27.2", features = ["serde"] }
eframe = { version = "0.27.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "serde"
] }
log = "0.4"

sps_eventbuilder = { path = "src/sps_eventbuilder" }
cebra_sps_eventbuilder = { path = "src/cebra_sps_eventbuilder" }
cebra_eventbuilder = { path = "src/cebra_eventbuilder" }

# CeBrA Efficiency app
egui_extras = { version = "0.27.2", features = ["datepicker"]}
chrono = { version = "0.4", features = ["serde"] }
async-std = "1.5.3" 
rfd = "0.13"
varpro = "0.8.0"
nalgebra = "0.32.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.31"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# plotter dependencies
# polars = { version = "0.36", features = ["lazy", "parquet", "ndarray"] }
# rfd = "0.13"
# serde = { version = "1.0", features = ["derive"] }
# serde_yaml = "0.9.31"
serde_json = "1.0"
geo = "0.27.0"
fnv = "1.0.7"
# varpro = "0.8.0"
# nalgebra = "0.32.4"

polars = { version = "0.36", features = ["lazy", "parquet", "ndarray", "dtype-struct"] }

# SPS Plot dependencies
reqwest = {version = "0.11.24", features = ["blocking", "json"]}
scraper = "0.18.1"
regex = "1.10.3"
tokio = { version = "1.36.0", default-features = false, features = ["rt", "sync", "macros", "io-util", "time"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

